--- a/src/app.html
+++ b/src/app.html
@@ -6,26 +6,61 @@
     <header class="border-bottom lh-1 py-3">
       <div class="row flex-nowrap justify-content-between align-items-center">
         <div class="col-4 pt-1">
-          <a class="link-secondary" href="#">Subscribe</a>
+          <a class="link-secondary" route-href="home">Home</a>
         </div>
         <div class="col-4 text-center">
-          <a class="blog-header-logo text-body-emphasis text-decoration-none" href="#">Large</a>
+          <a
+            class="blog-header-logo text-body-emphasis text-decoration-none"
+            route-href="home"
+            >Blog App Logo</a
+          >
         </div>
         <div class="col-4 d-flex justify-content-end align-items-center">
           <a class="link-secondary" href="#" aria-label="Search">
-            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor"
-              stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="mx-3" role="img"
-              viewBox="0 0 24 24">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="20"
+              height="20"
+              fill="none"
+              stroke="currentColor"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              class="mx-3"
+              role="img"
+              viewBox="0 0 24 24"
+            >
               <title>Search</title>
               <circle cx="10.5" cy="10.5" r="7.5" />
               <path d="M21 21l-5.2-5.2" />
             </svg>
           </a>
           <div>
-            <a class="btn btn-sm btn-outline-secondary" route-href="route: login" if.bind="!currentUser">Log in</a>
-            <a class="btn btn-sm btn-outline-secondary" href="#" if.bind="!currentUser">Sign up</a>
-            <a class="btn btn-sm btn-outline-secondary" href="#" if.bind="currentUser">New Post</a>
-            <a class="btn btn-sm btn-outline-secondary" href="#" if.bind="currentUser" click.delegate="logout()">Log out</a>
+            <a
+              class="btn btn-sm btn-outline-secondary ${router.currentInstruction.config.name === 'login' ? 'active' : ''}"
+              route-href="route: login"
+              if.bind="!currentUser"
+              >Log in</a
+            >
+            <a
+              class="btn btn-sm btn-outline-secondary ${router.currentInstruction.config.name === 'signup' ? 'active' : ''}"
+              route-href="route: signup"
+              if.bind="!currentUser"
+              >Sign up</a
+            >
+            <a
+              class="btn btn-sm btn-outline-secondary ${router.currentInstruction.config.name === 'create-post' ? 'active' : ''}"
+              route-href="route: create-post"
+              if.bind="currentUser"
+              >New Post</a
+            >
+            <a
+              class="btn btn-sm btn-outline-secondary"
+              href="#"
+              if.bind="currentUser"
+              click.delegate="logout()"
+              >Log out</a
+            >
           </div>
         </div>
       </div>
@@ -33,7 +68,9 @@
 
     <div class="nav-scroller py-1 mb-3 border-bottom">
       <nav class="nav nav-underline justify-content-between">
-        <a class="nav-item nav-link link-body-emphasis active" href="#">World</a>
+        <a class="nav-item nav-link link-body-emphasis active" href="#"
+          >World</a
+        >
         <a class="nav-item nav-link link-body-emphasis" href="#">U.S.</a>
         <a class="nav-item nav-link link-body-emphasis" href="#">Technology</a>
         <a class="nav-item nav-link link-body-emphasis" href="#">Design</a>
@@ -114,23 +151,29 @@
 
     <div class="row g-5">
       <div class="col-md-8">
-        <h3 class="pb-4 mb-4 fst-italic border-bottom">
+        <!-- <h3 class="pb-4 mb-4 fst-italic border-bottom">
           From the Firehose
-        </h3>
+        </h3> -->
         <router-view></router-view>
-        <nav class="blog-pagination" aria-label="Pagination">
+        <!-- <nav class="blog-pagination" aria-label="Pagination">
           <a class="btn btn-outline-primary rounded-pill" href="#">Older</a>
           <a class="btn btn-outline-secondary rounded-pill disabled" aria-disabled="true">Newer</a>
-        </nav>
-
+        </nav> -->
       </div>
 
       <div class="col-md-4">
-        <div class="position-sticky" style="top: 2rem;">
+        <div class="position-sticky" style="top: 2rem">
           <span>Welcome, ${ currentUser || 'Guest' }</span>
           <div class="p-4 mb-3 bg-body-tertiary rounded">
             <h4 class="fst-italic">Tags</h4>
-            <a route-href="route: tag-view; params.bind: {tag: tag}" repeat.for="tag of tags"><span class="badge rounded-pill bg-info">${tag}</span></a>
+            <div class="d-flex flex-wrap gap-2">
+              <a
+                route-href="route: tag-view; params.bind: {tag: tag}"
+                repeat.for="tag of tags"
+              >
+                <span class="badge rounded-pill bg-info">${tag}</span>
+              </a>
+            </div>
           </div>
 
           <!-- <div>
@@ -181,7 +224,12 @@
           <div class="p-4">
             <h4 class="fst-italic">Archives</h4>
             <ol class="list-unstyled mb-0">
-              <li repeat.for="archive of archives"><a route-href="route: archive-view; params.bind: {archive: archive}">${ archive }</a></li>
+              <li repeat.for="archive of archives">
+                <a
+                  route-href="route: archive-view; params.bind: {archive: archive}"
+                  >${ archive }</a
+                >
+              </li>
             </ol>
           </div>
 
@@ -196,12 +244,14 @@
         </div>
       </div>
     </div>
-
   </main>
 
   <footer class="py-5 text-center text-body-secondary bg-body-tertiary">
-    <p>Blog template built for <a href="https://getbootstrap.com/">Bootstrap</a> by <a
-        href="https://twitter.com/mdo">@mdo</a>.</p>
+    <p>
+      Blog template built for
+      <a href="https://getbootstrap.com/">Bootstrap</a> by
+      <a href="https://twitter.com/mdo">@mdo</a>.
+    </p>
     <p class="mb-0">
       <a href="#">Back to top</a>
     </p>
